Fix for not weeding out plugin duplicates because we were only checking the filename. Now, do a deep comparison of the name, description, and order of mime types. This will prevent two plugins with these same properties but with diferent names from loading. bug 110781 r=av sr=beard